--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,15 +38,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers: 11+3\n",
     "\n",
-    "Strings:\n",
+    "Strings: 'Our wedding is 11/3/2023'\n",
     "\n",
-    "Lists:\n",
+    "Lists: Types_of_cake = ['Tres Leches','Wedding']\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: Groomsmen = ('Amador','Rob','DJ','Adam','Jon')\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: bridal_party = {'maid_of_honor':'Ashley\",'second_in_command':'Natalie'}\n"
    ]
   },
   {
@@ -62,12 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.25"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 + .25\n",
+    "200.50 / 2\n",
+    "200.25 - 100\n",
+    "50.125 * 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,18 +100,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 * (6 + 5)\n",
+    "4 * 6 + 5\n",
+    "4 + 6 * 5"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_number = 3 + 1.5 + 4\n",
+    "type(my_number)"
    ]
   },
   {
@@ -107,24 +159,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Square root:\n"
+    "# Square root:\n",
+    "25 ** 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Square:\n"
+    "# Square:\n",
+    "5 ** 2"
    ]
   },
   {
@@ -143,15 +219,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
-    "\n"
+    "\n",
+    "s ='hello'\n",
+    "s[1]"
    ]
   },
   {
@@ -163,15 +252,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olleh'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
-    "\n"
+    "\n",
+    "s[::-1]"
    ]
   },
   {
@@ -183,29 +284,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s ='hello'\n",
     "# Print out the 'o'\n",
     "\n",
     "# Method 1:\n",
+    "s[4]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Method 2:\n",
-    "\n"
+    "\n",
+    "s[-1]"
    ]
   },
   {
@@ -224,24 +349,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 1:\n"
+    "# Method 1:\n",
+    "my_list = [0,0,0]\n",
+    "my_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 2:\n"
+    "# Method 2:\n",
+    "[0]*3"
    ]
   },
   {
@@ -252,15 +402,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, [3, 4, 'goodbye']]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list3 = [1,2,[3,4,'hello']]\n",
-    "\n"
+    "list3[2][2] = 'goodbye'\n",
+    "list3"
    ]
   },
   {
@@ -272,13 +439,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list4 = [5,3,4,6,1]\n",
+    "list4.sort()\n",
+    "list4\n",
     "\n"
    ]
   },
@@ -298,59 +478,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'simple_key':'hello'}\n",
-    "# Grab 'hello'\n"
+    "# Grab 'hello'\n",
+    "d['simple_key']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'k1':{'k2':'hello'}}\n",
-    "# Grab 'hello'\n"
+    "# Grab 'hello'\n",
+    "d['k1']['k2']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Getting a little tricker\n",
     "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
     "\n",
-    "#Grab hello\n"
+    "#Grab hello\n",
+    "d['k1'][0]['nest_key'][1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This will be hard and annoying!\n",
-    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}"
+    "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
+    "d['k1'][2]['k2'][1]['tough'][2][0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you sort a dictionary? Why or why not?<br><br>"
+    "Can you sort a dictionary? Why or why not?<br><br>\n",
+    "\n",
+    "No\n"
    ]
   },
   {
@@ -364,14 +594,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the major difference between tuples and lists?<br><br>"
+    "What is the major difference between tuples and lists?<br><br>\n",
+    "\n",
+    "They can not be changed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How do you create a tuple?<br><br>"
+    "How do you create a tuple?<br><br>\n",
+    "\n",
+    "You put them in ()"
    ]
   },
   {
@@ -385,7 +619,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is unique about a set?<br><br>"
+    "What is unique about a set?<br><br>\n",
+    "\n",
+    "It returns as a library"
    ]
   },
   {
@@ -397,13 +633,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 11, 22, 33}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list5 = [1,2,2,33,4,4,11,22,3,3,2]\n",
+    "set(list5)\n",
     "\n",
     "\n"
    ]
@@ -467,61 +715,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer before running cell\n",
+    "# Answer before running cell false\n",
     "2 > 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer before running cell\n",
+    "# Answer before running cell false\n",
     "3 <= 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer before running cell\n",
+    "# Answer before running cell false\n",
     "3 == 2.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer before running cell\n",
-    "3.0 == 3"
+    "# Answer before running cell true\n",
+    "3.0 == 3t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Answer before running cell\n",
+    "# Answer before running cell true\n",
     "4**0.5 != 2"
    ]
   },
@@ -534,13 +837,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# two nested lists\n",
+    "# two nested lists true\n",
     "l_one = [1,2,[3,4]]\n",
     "l_two = [1,2,{'k1':4}]\n",
     "\n",
@@ -559,7 +873,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -573,7 +887,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
