--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -854,7 +854,7 @@
     }
    ],
    "source": [
-    "# two nested lists true\n",
+    "# two nested lists this is actually False\n",
     "l_one = [1,2,[3,4]]\n",
     "l_two = [1,2,{'k1':4}]\n",
     "\n",
